# smart-id-rust-client

./: Cargo.toml  README.MD  temp.txt
.cargo/: config.toml
certs/demo/root/: DEMO_SK_TIMESTAMPING_UNIT_2025E.pem.crt  DEMO_SK_TIMESTAMPING_UNIT_2025R.pem.crt  TEST of NQ-SK 2016_reissued.pem  TEST_EID-NQ_2021R.pem.crt  TEST_EID-Q_2021E.pem.crt  TEST_EID-Q_2021R.pem.crt  TEST_of_SK_ID_Solutions_EID-Q_2024R.pem.crt  TEST_of_SK_TSA_CA_2023E.pem.crt  TEST_of_SK_TSA_CA_2023R.pem.crt  demo_tsu_ecc_2023.pem.crt  demo_tsu_rsa_2023.pem.crt  sid_demo_sk_ee_2022_PEM.crt  tsp.demo.sk.ee_2024.pem.cer  tsp_demo_sk_ee_2023.pem.cer  tsp_demo_sk_ee_2025.pem.cer
certs/production/root/: SK_ID_Solutions_ROOT_G1E.pem.crt  SK_ID_Solutions_ROOT_G1R.pem.crt
docs/: book.toml
docs/src/: SUMMARY.md  intro.md  smart_id.md  verfiication.md
examples/: smart_id_client.rs  smart_id_client_V2.rs  smart_id_client_V3.rs
src/: client_controller.rs  config.rs  error.rs  lib.rs  main.rs
src/client/: common.rs  mod.rs  requests.rs  reqwest_generic.rs  session.rs  smart_id_client.rs  smart_id_connector.rs
src/client/v2/: mod.rs  smart_id_connector.rs
src/client/v3/: mod.rs  smart_id_client.rs
src/models/: authentication_session.rs  certificate_choice_session.rs  common.rs  device_link.rs  dynamic_link.rs  interaction.rs  mod.rs  requests.rs  response.rs  responses.rs  semantic_identifier.rs  session.rs  session_status.rs  signature.rs  signature_session.rs  user_identity.rs
src/models/api/: authentication_session.rs  certificate_choice_session.rs  mod.rs  session_status.rs  signature_session.rs
src/models/v2/: common.rs  mod.rs  requests.rs  responses.rs
src/models/v3/: authentication_session.rs  certificate_choice_session.rs  common.rs  config.rs  dynamic_link.rs  interaction.rs  mod.rs  session_status.rs  signature.rs  signature_session.rs
src/utils/: demo_certificates.rs  mod.rs  national_id_number.rs  production_certificates.rs  random.rs  sec_x509.rs  verification.rs
tests/: app_interaction_tests.rs
