[package]
name = "smart-id-rust-client"
version = "0.2.0"
description = "Smart ID Rust Client"
homepage = "https://smart-id.com"
authors = ["Michallis Pashidis <michallis@trust1team.com>, Joey de l'Arago <joeydelarago@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/Trust1Team/smart-id-rust-client"
edition = "2021"
keywords = ["eidas", "eID", "wallet", "authentication", "signing"]
categories = ["authentication"]
readme = "README.MD"

[lib]
name = "smart_id_rust_client"
path = "src/lib.rs"
test = true
doc = true
edition = "2021"
crate-type = ["lib"]

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }

# Error handling, logging
anyhow = "1.0.95"
thiserror = "1.0.59"
serde_with = "3.8.0"
tracing = "0.1.40"
tracing-subscriber = {  version = "0.3.18", features = [
    "env-filter",
    "fmt",
    "json",
] }

# HTTP & Serialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
reqwest = {  version = "0.12.4", features = [
    "json",
    "rustls-tls",
] }
chrono = { version = "0.4.39", features = ["serde"] }
strum = "0.27.1"
strum_macros = "0.26.4"

# Cryptography
base64 = "0.22.0"
x509-parser = "0.16.0"
sha2 = "0.10.8"
sha3 = "0.10.5"
hmac = "0.12.1"
rand_chacha = "0.3.1"
rand = "0.8.5"
ring = "0.17.8"
webpki = "0.22.4"
rustls = "0.21.12"
rustls-native-certs = "0.8.1"
oid-registry = "0.7.1"
rsa = "0.9.7"
num-bigint = "0.4.6"
num-traits = "0.2.19"
der = "0.7.9"
spki = "0.7.3"
openssl = "0.10.71"

[dev-dependencies]
tracing-test = "0.2.4"

# QR Image Generating For testing
qrcode = "0.14.1"
image = "0.25.5"
open = "5.3.2"

[profile.dev]
opt-level = 1              # Use slightly better optimizations.
strip = false              # Automatically strip symbols from the binary.
split-debuginfo = "packed" # this feature on the dev profile is necessary to make sure we can use GDB for debugging --> will make sure it can load all symbols

[profile.release]
opt-level = "s"
strip = true
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
panic = 'abort'
